--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,10 @@
       "email": "780042175@qq.com"
     }
   ],
-  "require": {},
+  "require": {
+    "php": ">=7.0.0",
+    "ext-yac": "*"
+  },
   "autoload": {},
   "autoload-dev": {},
   "repositories": {}
